Ajout d'autres choses sympatiques

--- a/compet.html
+++ b/compet.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    <div id="titleContainer">
+        <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    </div>
     <div class="container">
         <a href="quality.html"><span class="roundButtons blurryText"><p>Qualités et Défauts</p></span></a>
         <a href="exp.html"><span class="roundButtons blurryText"><p>Expérience et niveau</p></span></a>
@@ -15,7 +17,7 @@
     </div>
     <div class="containerdeux">
         <span class="roundTextCase">
-            <ul>
+            <ul class="fade-in">
                 <p class="margintitlesbox3">Compétences orales et sociales</p>
                 <p class="marginlilleft">Je suis extraverti :</p>
                 <li class="marginlilleft"> je n'ai aucun problème à avoir une quelconque
