--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    <div id="titleContainer">
+        <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    </div>
     <div class="container">
         <a href="quality.html"><span class="roundButtons blurryText"><p>Qualités et Défauts</p></span></a>
         <a href="exp.html"><span class="roundButtons blurryText"><p>Expérience et niveau</p></span></a>
         <a href="mdt.html"><span class="roundButtons blurryText"><p>Moyen de transports</p></span></a>
         <a href="compet.html"><span class="roundButtons blurryText"><p>Compétences sociales</p></span></a>
     </div>
-    <div class="containerdeux">
+    <div class="containerdeux fade-in">
         <div id="picContainer">
-            <img class="left" width="200px" height="200px" src="assets/img/moi.jpg">
+            <a href="https://www.linkedin.com/in/raphaël-ivol-b5b9021b8/" class="hoverText">
+            <img class="left" width="200px" height="200px" src="assets/img/moi.jpg"></a>
             <div id="infoContainer">
-                <p class="lefttoleft">Ivol Raphaël</p>
-                <p class="lefttoleft">02/07/2002</p>
-                <p class="lefttoleft">Né à le Havre</p>
+                <p class="lefttoleft">Raphaël Ivol</p>
+                <p class="lefttoleft">18 ans</p>
+                <p class="lefttoleft">Né au Havre</p>
                 <p class="lefttoleft">70 rue lamoricière</p>
             </div>
         </div>
+        <p class="bigFont">Vers mon profil LinkedIn</p>
     </div>
+    
 </body>
