--- a/mdt.html
+++ b/mdt.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    <div id="titleContainer">
+        <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    </div>
     <div class="container">
         <a href="quality.html"><span class="roundButtons blurryText"><p>Qualités et Défauts</p></span></a>
         <a href="exp.html"><span class="roundButtons blurryText"><p>Expérience et niveau</p></span></a>
@@ -15,15 +17,15 @@
     </div>
     <div class="containerdeux">
         <span class="roundTextCase">
-            <ul>
+            <ul class="fade-in">
                 <p class="margintitlesbox3">Déplacements</p>
-                <p class="">Je n'utilise pas de moyen motorisés pour aller 
+                <p class="marginlilright">Je n'utilise pas de moyen motorisés pour aller 
                     sur mon lieu de travail, excepté le bus.
                     </p>
-                <p class=""> Je privilégie les déplacements éco-responsables
+                <p class="marginlilright"> Je privilégie les déplacements éco-responsables
                     tant que je le peux encore (vélo, skate, marche)
                 </p>
-                <p class="">Je n'ai pas encore le permis.</p>
+                <p class="marginlilright">Je n'ai pas encore le permis.</p>
             </ul>
         </span>
     </div>
