--- a/quality.html
+++ b/quality.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    <div id="titleContainer">
+        <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    </div>
     <div class="container">
         <a href="quality.html"><span class="roundButtons blurryText"><p>Qualités et Défauts</p></span></a>
         <a href="exp.html"><span class="roundButtons blurryText"><p>Expérience et niveau</p></span></a>
@@ -15,7 +17,7 @@
     </div>
     <div class="containerdeux">
         <span class="roundTextCase">
-            <ul>
+            <ul class="marginlilright fade-in">
                 <p class="bigFont marginlilleft margintitlesbox2">Défauts :</p>
                 <li class="bigFont marginlilleft"> perfectionniste</li>
                 <li class="bigFont marginlilleft"> impatient</li>
