--- a/exp.html
+++ b/exp.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    <div id="titleContainer">
+        <div id="titleBox"><a href="index.html"><p>CV Raphaël Ivol</p></div></a>
+    </div>
     <div class="container">
         <a href="quality.html"><span class="roundButtons blurryText"><p>Qualités et Défauts</p></span></a>
         <a href="exp.html"><span class="roundButtons blurryText"><p>Expérience et niveau</p></span></a>
@@ -15,7 +17,7 @@
     </div>
     <div class="containerdeux">
         <span class="roundTextCase">
-            <ul>
+            <ul class="fade-in">
                 <p class="margintitlesbox3">Expérience</p>
                 <p class="bigFont">Année de 3ème, stage en développement web chez "Microminute"</p>
                 <p class="bigFont">Cette année, formation en développeur web et web mobile à l'école de la MANU</p>
